refactor: integrate display names in command placeholders