@@ -12,7 +12,7 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -28,10 +28,7 @@ public final class BlockCommand implements TabExecutor {
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender,
-                             @NotNull Command cmd,
-                             @NotNull String label,
-                             String @NotNull [] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
         if (!(sender instanceof Player player)) {
             sender.sendMessage("Only players may use this command");
             return true;
@@ -59,7 +56,7 @@ public final class BlockCommand implements TabExecutor {
             if (resolved == null) return;
 
             UUID targetId = resolved.getUniqueId();
-            String realName = plugin.database().records().getRealName(targetName);
+            String displayName = plugin.utility().nicks().getDisplayName(targetId, targetName);
 
             if (targetId.equals(player.getUniqueId())) {
                 plugin.scheduler().runTask(() -> MessageUtil.send(player, "utilities.blocking.error-self", Map.of()));
@@ -67,13 +64,13 @@ public final class BlockCommand implements TabExecutor {
             }
 
             if (hasBypassPermission(resolved)) {
-                plugin.scheduler().runTask(() -> MessageUtil.send(player, "utilities.blocking.error-cannot", Map.of("player", realName)));
+                plugin.scheduler().runTask(() -> MessageUtil.send(player, "utilities.blocking.error-cannot", Map.of("player", displayName)));
                 return;
             }
 
             plugin.scheduler().runTask(() -> {
                 if (!player.isOnline()) return;
-                executeBlock(player, targetId, realName);
+                executeBlock(player, targetId, displayName);
             });
         });
 
@@ -101,7 +98,7 @@ public final class BlockCommand implements TabExecutor {
     }
 
     private void sendError(Player player, String label, String key) {
-        String usage = plugin.commandConfig().getUsage("block", null, label);
+        String usage = plugin.commandConfig().getUsage("block", label);
         MessageUtil.send(player, "errors." + key, Map.of("usage", usage));
     }
 
@@ -131,16 +128,13 @@ public final class BlockCommand implements TabExecutor {
     }
 
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender,
-                                      @NotNull Command cmd,
-                                      @NotNull String label,
-                                      String @NotNull [] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
         if (!(sender instanceof Player player) || args.length != 1 || !player.hasPermission(PERMISSION)) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         String input = args[0].toLowerCase();
-        return Bukkit.getOnlinePlayers().stream()
+        return new ArrayList<>(Bukkit.getOnlinePlayers()).stream()
                 .map(Player::getName)
                 .filter(name -> name.toLowerCase().startsWith(input))
                 .limit(20)
