@@ -12,7 +12,6 @@ import org.bukkit.persistence.PersistentDataType;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -80,15 +79,17 @@ public final class KillCommand implements TabExecutor {
     }
 
     private void handleKill(CommandSender sender, String targetArg, String selectorAll) {
-        String consoleName = String.valueOf(plugin.lang().get("general.console-name"));
-        String senderName = (sender instanceof Player p) ? p.getName() : consoleName;
+        String senderDisplayName = (sender instanceof Player p)
+                ? plugin.utility().nicks().getDisplayName(p.getUniqueId(), p.getName())
+                : String.valueOf(plugin.lang().get("general.console-name"));
+
         boolean feedbackEnabled = plugin.config().consoleToPlayerFeedback();
 
         if (targetArg.equalsIgnoreCase(selectorAll)) {
             for (Player target : Bukkit.getOnlinePlayers()) {
                 performKillAction(target);
                 if (!target.equals(sender)) {
-                    MessageUtil.send(target, "utilities.kill.by", Map.of("player", senderName));
+                    MessageUtil.send(target, "utilities.kill.by", Map.of("player", senderDisplayName));
                 }
             }
             if (sender instanceof Player p) MessageUtil.send(p, "utilities.kill.everyone", Map.of());
@@ -103,19 +104,21 @@ public final class KillCommand implements TabExecutor {
             return;
         }
 
+        String targetDisplayName = plugin.utility().nicks().getDisplayName(target.getUniqueId(), target.getName());
+
         performKillAction(target);
 
         if (sender instanceof Player p) {
             if (target.equals(p)) {
                 MessageUtil.send(p, "utilities.kill.self", Map.of());
             } else {
-                MessageUtil.send(p, "utilities.kill.other", Map.of("player", target.getName()));
-                MessageUtil.send(target, "utilities.kill.by", Map.of("player", p.getName()));
+                MessageUtil.send(p, "utilities.kill.other", Map.of("player", targetDisplayName));
+                MessageUtil.send(target, "utilities.kill.by", Map.of("player", senderDisplayName));
             }
         } else {
-            sender.sendMessage("Killed " + target.getName());
+            sender.sendMessage("Killed " + targetDisplayName);
             if (feedbackEnabled) {
-                MessageUtil.send(target, "utilities.kill.by", Map.of("player", senderName));
+                MessageUtil.send(target, "utilities.kill.by", Map.of("player", senderDisplayName));
             }
         }
     }
@@ -134,17 +137,17 @@ public final class KillCommand implements TabExecutor {
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, String @NotNull [] args) {
-        if (args.length != 1) return Collections.emptyList();
+        if (args.length != 1) return List.of();
 
         String input = args[0].toLowerCase();
         String selectorAll = plugin.commandConfig().getSelector("global.all", "@a");
         List<String> suggestions = new ArrayList<>();
 
         if (sender instanceof Player player) {
-            if (!player.hasPermission(PERM_BASE)) return Collections.emptyList();
+            if (!player.hasPermission(PERM_BASE)) return List.of();
 
             if (player.hasPermission(PERM_OTHERS)) {
-                Bukkit.getOnlinePlayers().stream()
+                new ArrayList<>(Bukkit.getOnlinePlayers()).stream()
                         .map(Player::getName)
                         .filter(name -> name.toLowerCase().startsWith(input))
                         .limit(20)
@@ -155,7 +158,7 @@ public final class KillCommand implements TabExecutor {
                 suggestions.add(selectorAll);
             }
         } else {
-            Bukkit.getOnlinePlayers().stream()
+            new ArrayList<>(Bukkit.getOnlinePlayers()).stream()
                     .map(Player::getName)
                     .filter(name -> name.toLowerCase().startsWith(input))
                     .limit(20)
